# sva_ui

./: .gitmodules  Cargo.toml  README.md  STATE.json  SVA_panic_log2024-01-09 18:03:30.txt  empty  index.html  rust-toolchain  sva_ui-ed6f7cc0ef34c0b605686bad5e73e98d1214c84c43d599b8dcfed75f20eca4e52a9772d7fdb32476e4953dd442edfe27.js  sva_ui-ed6f7cc0ef34c0b605686bad5e73e98d1214c84c43d599b8dcfed75f20eca4e52a9772d7fdb32476e4953dd442edfe27_bg.wasm
.github/workflows/: rust.yml
assets/: sw.js
locales/: app.yml
src/: app.rs  conn_ui.rs  custom_logger.rs  help_window.rs  indicator.rs  lib.rs  main.rs  sva_shell.rs  test.rs  test_window.rs
src/storage/: connections.rs  connections_manager.rs  custom_logger.rs  mod.rs  modals_manager.rs  toasts.rs
src/ui/: app.rs  component_list_widget.rs  connection_widget.rs  help_window.rs  indicator.rs  indicator_widget.rs  mod.rs  ram_window.rs  sva_shell.rs  sva_window.rs  syntax.rs
