[package]
name = "sva_ui"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"


[dependencies]

# Virtual machine

simple_virtual_assembler = { path = "simple_virtual_assembler"}

# UI liblary

egui = "0.25.0"
eframe = { version = "0.25.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

# egui components
egui_code_editor = "0.2.1"
egui_file = "0.14.0"
egui-notify = "0.12.0"
egui-modal = "0.3.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"


# Utility
chrono = "0.4.31"
backtrace = "0.3.69"
once_cell = "1.19.0"
peak_alloc = "0.2.0"

# Localization 
rust-i18n = "2"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]


